--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,6 +4,7 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  background-color: moccasin;
 }
 
 a {
@@ -14,3 +15,11 @@ a {
 * {
   box-sizing: border-box;
 }
+
+img {
+  border: '1px #dddddd';
+  border-radius: '8px';
+  box-shadow: '5px 5px 2px #aaaaaa';
+}
+
+
